# chip8-emu-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
frontends/: main.c  roms.h
include/: chip8.h  chip8_priv.h  fonts.h  instructions.h  prng.h
src/: chip8.c  fonts.c  instructions.c  prng.c
